# GPU-Zen-3

./: README.md
4-Tools-of-the-Trade/18-Differentiable-graphics-with-Slang.D/: ReadMe.txt
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/: .gitignore  CMakeLists.txt  README.md
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/cpp/: config.h  config_type.h
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/cpp/common/: Defines.h  Grid.h  SSWE.ShareCode.h  Timer.h  common.cpp  common.h  options.cpp  options.h
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/cpp/cu/: CudaDevice.cpp  CudaDevice.h  CudaExecutionPolicy.h  Singleton.h  cuFunc.cu  cuFunc.cuh  cuKernelLauncher.cu  cuKernelWraper.cu  cuKernelWraper.cuh  cuMath.cu  cuMath.cuh  cuUtils.cuh  helper_cuda.h  helper_string.h  svd2.cuh
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/cpp/scene/: RiverScene.cpp  RiverScene.h  TestFDScene.cpp  TestFDScene.h  TestODScene.cpp  TestODScene.h  TestOutwardScene.cpp  TestOutwardScene.h  TestSwirlScene.cpp  TestSwirlScene.h  flowmap.cpp  heightmap.cpp  scene.cpp  scene.h
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/image/: Height00120.txt  cs512.txt  lightspeed_low.txt  new_beach_smaller_stones_sand.txt  new_beach_smaller_stones_terrain.txt  sig.txt  sig_low.txt  sig_low_low.txt
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/render/: PoissonGenerator.h  camera.h  cyGLSL.h  cyMatrix3.h  cyMatrix4.h  cyPoint.h  main.cpp  mathUtils.h  mesh.h  shadow.h  stb_image.h  visualizer.cpp  visualizer.h
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/shaders/: caustics.frag  caustics.vert  cube.frag  displaybuffer.frag  geometrypass.frag  geometrypass.vert  ground.frag  ground.vert  shadowpass.frag  shadowpass.vert  simpleground.frag  ssao.frag  ssaoblur.frag  water.frag  water.vert  water_gq.frag  water_gq.vert
4-Tools-of-the-Trade/21-Animating-water-using-profile-buffer/shaders/backup/: water_gq - Copy.frag  water_gq - Copy.vert
(+102 files in other folders)
